Fix vertical alignment of links

--- a/ui/pages/settings/flask/view-snap/index.scss
+++ b/ui/pages/settings/flask/view-snap/index.scss
@@ -5,6 +5,10 @@
     &__version-number {
       font-weight: bold;
     }
+
+    &__link {
+      vertical-align: top;
+    }
   }
 
   .connected-sites-list {
